--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,7 @@ dependencies = [
     "mypy",  # https://github.com/python/mypy
 
     "cli-base-utilities",  # https://github.com/jedie/cli-base-utilities
-    "click",  # https://github.com/pallets/click/
-    "rich-click",  # https://github.com/ewels/rich-click
+    "tyro",  # https://github.com/brentyi/tyro
     "rich",  # https://github.com/Textualize/rich
 ]
 
@@ -205,6 +204,7 @@ applied_migrations = [
     "2cdc1d8", # 2024-08-25T19:00:41+02:00
     "56c3caa", # 2024-09-22T16:52:30+02:00
     "ff48b81", # 2024-11-09T19:08:01+01:00
+    "690a4fb", # 2024-11-21T18:54:44+01:00
 ]
 
 [manageprojects.cookiecutter_context.cookiecutter]
